# secc

./: .prettierignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  main.css  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  lib.rs  main.rs  menu.rs  server.rs  state.rs  store.rs  tray.rs
src-tauri/src/shell/: macos.rs  mod.rs  windows.rs
src/components/: app-sidebar.tsx  cert-key.tsx  cert.tsx  combind-proxy-rule.tsx  confirm.tsx  custom-proxy-rule.tsx  data-table.tsx  direct-rule.tsx  layout.tsx  proxy-rule.tsx  section-cards.tsx  server-form.tsx  server-table.tsx  theme-provider.tsx  traffic-chart.tsx  traffic-log-table.tsx  traffic-log.tsx
src/components/ui/: chart.tsx  table.tsx
src/pages/: dashboard.tsx  direct-rules.tsx  proxy-rules.tsx  rule.tsx  server.tsx  servers.tsx  setting.tsx  tls.tsx  traffic-logs.tsx
