[package]
name = "secc"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "secc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.2.6"
tauri-plugin-shell = "2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tauri-plugin-dialog = "2"
anyhow = "1.0.97"
rustls-cert-gen = "0.1.0"
tauri-plugin-store = "2"
sysinfo = "0.33.1"
tauri-plugin-http = "2"
